--- a/WebContent/pages/store.html
+++ b/WebContent/pages/store.html
@@ -49,7 +49,7 @@
                 </button>
               </div>
               <div>
-                <button id="btnMeBuy{{product.bid}}" class="btn btn-primary hidden" ng-show="true">
+                <button id="btnMeBuy{{product.bid}}" class="btn btn-primary hidden" ng-click="lib.navToBuyBook(product.bid)" ng-show="true">
                   Buy <span class="glyphicon glyphicon-shopping-cart"></span>
                 </button>
               </div>
