Working on admin --> view users
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/admin/adMenu.html
+++ b/WebContent/pages/admin/adMenu.html
@@ -17,7 +17,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="myNavBar">
           <ul class="nav navbar-nav">
-            <li><button id="btnStore" type="button" class="btn navbar-btn btn-default active" ng-click="lCtrt.navToStore()">Store</button></li>
+            <li><button id="btnUsers" type="button" class="btn navbar-btn btn-default active" ng-click="lCtrt.navToStore()">Store</button></li>
             <li><button id="btnMyBooks" type="button" class="btn navbar-btn btn-default" ng-click="lCtrt.navToMyBooks()">My books</button></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
