--- a/WebContent/pages/admin/alogin.html
+++ b/WebContent/pages/admin/alogin.html
@@ -17,9 +17,9 @@
             <div class="row">
               <div class="col-xs-8 col-xs-offset-2">
                 <div class="form-group">
-                  <label for="inputUsername">Login</label> <input type="text" class="form-control" id="inputUsername" placeholder="Username" ng-model="mCtrt.admn.login">
+                  <label for="inputUsername">Login</label> <input type="text" class="form-control" id="inputLogin" placeholder="Username" ng-model="mCtrt.admin.login">
                   <div>
-                    <label for="inputPassword1">Password</label> <input type="password" class="form-control" id="inputPassword1" placeholder="Password" ng-model="mCtrt.admn.password">
+                    <label for="inputPassword1">Password</label> <input type="password" class="form-control" id="inputPassword1" placeholder="Password" ng-model="mCtrt.admin.password">
                   </div>
                 </div>
                 <div class="auth-fail alert alert-danger" role="alert" ng-if="mCtrt.wrongLoginData">{{mCtrt.wrongLoginMessage}}</div>
