--- a/WebContent/pages/admin/users.html
+++ b/WebContent/pages/admin/users.html
@@ -9,7 +9,7 @@
       </tr>
       <tr ng-repeat="us in uCtrl.users">
         <td>
-          <!-- photo --> <img class="img-responsive" src="us.photo_url">
+          <!-- photo --> <img class="img-responsive" src="{{us.photo_url}}">
         </td>
         <td>
           <!-- username nickname email -->
@@ -38,19 +38,31 @@
           <!-- adress telephone -->
           <form class="form-horizontal">
             <div class="form-group">
-              <label class="col-sm-2 control-label">Username</label>
+              <label class="col-sm-2 control-label">Street name</label>
               <div class="col-sm-10">
-                <p class="form-control-static">{{us.username}}</p>
+                <p class="form-control-static">{{us.stName}}</p>
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-2 control-label">Nickname</label>
+              <label class="col-sm-2 control-label">Block number</label>
               <div class="col-sm-10">
-                <p class="form-control-static">{{us.nickname}}</p>
+                <p class="form-control-static">{{us.blNum}}</p>
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-2 control-label">Email</label>
+              <label class="col-sm-2 control-label">City name</label>
+              <div class="col-sm-10">
+                <p class="form-control-static">{{us.cityName}}</p>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">ZIP code</label>
+              <div class="col-sm-10">
+                <p class="form-control-static">{{us.zip}}</p>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Phone phone</label>
               <div class="col-sm-10">
                 <p class="form-control-static">{{us.email}}</p>
               </div>
@@ -59,6 +71,14 @@
         </td>
         <td class="col-md-3">
           <!-- description -->
+          <form class="form-horizontal">
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Description</label>
+              <div class="col-sm-10">
+                <p class="form-control-static">{{us.description}}</p>
+              </div>
+            </div>
+          </form>
         </td>
       </tr>
     </table>
