--- a/WebContent/pages/admin/users.html
+++ b/WebContent/pages/admin/users.html
@@ -1,12 +1,6 @@
 <div ng-controller="usersController as uCtrl">
-  <div class="container-fluid>">
+  <div class="container-fluid wellwellwell">
     <table class="table table-stripped table-condensed">
-      <tr>
-        <th>Picture</th>
-        <th></th>
-        <th></th>
-        <th></th>
-      </tr>
       <tr ng-repeat="us in uCtrl.users">
         <td>
           <!-- photo --> <img class="img-responsive" src="{{us.photo_url}}">
@@ -15,20 +9,26 @@
           <!-- username nickname email -->
           <form class="form-horizontal">
             <div class="form-group">
-              <label class="col-sm-2 control-label">Username</label>
-              <div class="col-sm-10">
+              <label class="col-sm-6 control-label">Username</label>
+              <div>
                 <p class="form-control-static">{{us.username}}</p>
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-2 control-label">Nickname</label>
-              <div class="col-sm-10">
+              <label class="col-sm-6 control-label">Nickname</label>
+              <div>
                 <p class="form-control-static">{{us.nickname}}</p>
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-2 control-label">Email</label>
-              <div class="col-sm-10">
+              <label class="col-sm-6 control-label">Email</label>
+              <div>
+                <p class="form-control-static">{{us.email}}</p>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-6 control-label">Phone phone</label>
+              <div>
                 <p class="form-control-static">{{us.email}}</p>
               </div>
             </div>
@@ -38,43 +38,37 @@
           <!-- adress telephone -->
           <form class="form-horizontal">
             <div class="form-group">
-              <label class="col-sm-2 control-label">Street name</label>
-              <div class="col-sm-10">
+              <label class="col-sm-6 control-label">Street name</label>
+              <div>
                 <p class="form-control-static">{{us.stName}}</p>
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-2 control-label">Block number</label>
-              <div class="col-sm-10">
+              <label class="col-sm-6 control-label">Block number</label>
+              <div>
                 <p class="form-control-static">{{us.blNum}}</p>
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-2 control-label">City name</label>
-              <div class="col-sm-10">
+              <label class="col-sm-6 control-label">City name</label>
+              <div>
                 <p class="form-control-static">{{us.cityName}}</p>
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-2 control-label">ZIP code</label>
-              <div class="col-sm-10">
+              <label class="col-sm-6 control-label">ZIP code</label>
+              <div>
                 <p class="form-control-static">{{us.zip}}</p>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label">Phone phone</label>
-              <div class="col-sm-10">
-                <p class="form-control-static">{{us.email}}</p>
               </div>
             </div>
           </form>
         </td>
-        <td class="col-md-3">
+        <td colspan="3">
           <!-- description -->
-          <form class="form-horizontal">
+          <form>
             <div class="form-group">
-              <label class="col-sm-2 control-label">Description</label>
-              <div class="col-sm-10">
+              <label class="control-label">Description</label>
+              <div>
                 <p class="form-control-static">{{us.description}}</p>
               </div>
             </div>
