Redesigning menu for admin, started working on book list
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/admin/adMenu.html
+++ b/WebContent/pages/admin/adMenu.html
@@ -1,30 +1,28 @@
 <div class="row" style="padding-top: 50px;">
   <div class="col-xs-12">
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavBar" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><ul class="list-inline">
-              <li><img class="img-rounded" width="32px" src="img/logo.png" alt="logo"></li>
-              <li>Unknown Worlds</li>
-            </ul></a>
+          <a class="navbar-brand" href="#">Administration</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="myNavBar">
           <ul class="nav navbar-nav">
-            <li><button id="btnUsers" type="button" class="btn navbar-btn btn-default active" ng-click="lCtrt.navToStore()">Store</button></li>
-            <li><button id="btnMyBooks" type="button" class="btn navbar-btn btn-default" ng-click="lCtrt.navToMyBooks()">My books</button></li>
+            <li><button id="btnUsers" type="button" class="btn btn-xs navbar-btn btn-default active" ng-click="mCtrt.navToUsers()">Users</button></li>
+            <li><button id="btnMyBooks" type="button" class="btn btn-xs navbar-btn btn-default" ng-click="mCtrt.navToBooks()">Books</button></li>
+            <li><button id="btnReviews" type="button" class="btn btn-xs navbar-btn btn-default" ng-click="mCtrt.navToReviews()">Reviews</button></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><button class="mypop btn btn-danger navbar-btn" 
             data-toggle="popover" 
             data-html="false" data-trigger="hover" data-placement="bottom" 
-            data-content="Log out">Greetings {{user.nickname}} </button></li>
+            data-content="Log out">Greetings {{admin.login}} </button></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
