--- a/WebContent/pages/admin/users.html
+++ b/WebContent/pages/admin/users.html
@@ -1,11 +1,11 @@
 <div ng-controller="usersController as uCtrl">
-  <div class="container-fluid wellwellwell">
+  <div class="container-fluid wellwellwell2">
     <table class="table table-stripped table-condensed">
       <tr ng-repeat="us in uCtrl.users">
-        <td>
+        <td style="width: 10%;">
           <!-- photo --> <img class="img-responsive" src="{{us.photo_url}}">
         </td>
-        <td>
+        <td style="width: 30%;">
           <!-- username nickname email -->
           <form class="form-horizontal">
             <div class="form-group">
@@ -34,7 +34,7 @@
             </div>
           </form>
         </td>
-        <td>
+        <td style="width:30%;">
           <!-- adress telephone -->
           <form class="form-horizontal">
             <div class="form-group">
@@ -63,7 +63,7 @@
             </div>
           </form>
         </td>
-        <td colspan="3">
+        <td>
           <!-- description -->
           <form>
             <div class="form-group">
@@ -73,6 +73,9 @@
               </div>
             </div>
           </form>
+        </td>
+        <td>
+        <!-- Control buttons - delete -->
         </td>
       </tr>
     </table>
