--- a/WebContent/pages/store.html
+++ b/WebContent/pages/store.html
@@ -1,14 +1,14 @@
 <div ng-controller="LibController as lib">
       <div class="booklist">
     <div class="row">
-      <div class="col-xs-4 col-xs-offset-4">
+      <div class="col-xs-6 col-xs-offset-3">
         <div class="input-group input-group-sm">
-           <span class="input-group-addon" id="sizing-addon3"><span class="glyphicon glyphicon-filter"></span></span> <input type="text" class="form-control" placeholder="Filter by name, genre or author" ng-model="searchBook">
+           <span class="input-group-addon" id="sizing-addon3"><span class="glyphicon glyphicon-filter"></span></span> <input type="text" class="form-control" placeholder="Filter by name or author" ng-model="searchBook">
         </div>
       </div>
       <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1">
         <table class="table table-hover table-striped table-bordered">
-          <tr ng-show="true" ng-repeat="product in products | filter:searchBook">
+          <tr ng-show="true" ng-repeat="product in products | filter:customBookFilter(searchBook)">
             <td class="shop-row-1"><img class="book-thumb img-thumbnail" ng-src="{{product.imageUrl}}"></td>
             <td class="shop-row-2">
               <div style="text-align: left;">
