--- a/WebContent/pages/admin/users.html
+++ b/WebContent/pages/admin/users.html
@@ -75,7 +75,7 @@
           </form>
         </td>
         <td>
-        <!-- Control buttons - delete -->
+        <!-- Control buttons - delete likes reviews -->
         </td>
       </tr>
     </table>
