--- a/WebContent/pages/admin/adstore.html
+++ b/WebContent/pages/admin/adstore.html
@@ -8,26 +8,26 @@
       </div>
       <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1">
         <table class="table table-hover table-striped table-bordered">
-          <tr ng-show="true" ng-repeat="bk in books | filter:searchBook">
-            <td class="shop-row-1"><img class="book-thumb img-thumbnail" ng-src="{{product.imageUrl}}"></td>
+          <tr ng-show="true" ng-repeat="bk in books | filter:BooksFilter(searchBook)">
+            <td class="shop-row-1"><img class="book-thumb img-thumbnail" ng-src="{{bk.imageUrl}}"></td>
             <td class="shop-row-2">
               <div style="text-align: left;">
-                <strong>{{product.name}}</strong> {{product.price | currency}}
+                <strong>{{bk.name}}</strong> {{bk.price | currency}}
               </div>
-              <div>By {{product.author}}</div>
-              <div class="center">{{product.description}}</div>
+              <div>By {{bk.author}}</div>
+              <div class="center">{{bk.description}}</div>
               <div class="panel-group">
                 <div class="panel panel-default">
                   <div class="panel-heading">
                     <h4 class="panel-title">
-                      <button id="btnRev{{product.bid}}" class="btn btn-info" data-toggle="collapse" data-target="#collapse{{product.bid}}">
-                        <span class="glyphicon glyphicon-comment"></span> Reviews <span class="badge">{{product.reviewCount}}</span>
+                      <button id="btnRev{{bk.bid}}" class="btn btn-info" data-toggle="collapse" data-target="#collapse{{bk.bid}}">
+                        <span class="glyphicon glyphicon-comment"></span> Reviews <span class="badge">{{bk.reviewCount}}</span>
                       </button>
                     </h4>
                   </div>
-                  <div id="collapse{{product.bid}}" class="panel-collapse collapse">
+                  <div id="collapse{{bk.bid}}" class="panel-collapse collapse">
                     <ul class="list-group">
-                      <li class="list-group-item" data-ng-repeat="re in product.reviews">
+                      <li class="list-group-item" data-ng-repeat="re in bk.reviews">
                         <div>{{re.nickname}}</div>
                         <div>{{re.reviewBody}}</div>
                       </li>
@@ -37,21 +37,10 @@
               </div>
             </td>
             <td class="shop-row-3">
-            <div id="btnLike{{product.bid}}" data-trigger="hover" class="mypop" data-html="true" data-toggle="popover" data-placement="bottom" title="Liked by" data-content="{{product.likesstring}}">
+            <div id="btnLike{{bk.bid}}" data-trigger="manual" class="mypop" data-html="true" data-toggle="popover" data-placement="bottom" title="Liked by" data-content="{{bk.likesstring}}">
               <span  class="label label-info mylikeclass">
-                <span style="vertical-align: text-bottom;" class="glyphicon glyphicon-thumbs-up"></span> <span class="badge">   {{product.likescount}}</span> 
+                <span style="vertical-align: text-bottom;" class="glyphicon glyphicon-thumbs-up"></span> <span class="badge">   {{bk.likescount}}</span> 
               </span>
-              </div>
-              <br>
-              <div>
-                <button id="btnMeRead{{product.bid}}" class="btn btn-default hidden" ng-click="lib.navToOpenBook(product.bid)">
-                  Read <span class="glyphicon glyphicon-book"></span>
-                </button>
-              </div>
-              <div>
-                <button id="btnMeBuy{{product.bid}}" class="btn btn-primary hidden" ng-click="lib.navToBuyBook(product.bid)" ng-show="true">
-                  Buy <span class="glyphicon glyphicon-shopping-cart"></span>
-                </button>
               </div>
             </td>
           </tr>
