Clickable popover almost ready
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/admin/adstore.html
+++ b/WebContent/pages/admin/adstore.html
@@ -37,7 +37,7 @@
               </div>
             </td>
             <td class="shop-row-3">
-            <div id="btnLike{{bk.bid}}" data-trigger="manual" class="mypop" data-html="true" data-toggle="popover" data-placement="bottom" title="Liked by" data-content="{{bk.likesstring}}">
+            <div class="mypop" id="btnLike{{bk.bid}}" data-trigger="manual" data-html="true" data-toggle="popover" data-placement="bottom" title="Liked by" data-content="{{bk.likesstring}}">
               <span  class="label label-info mylikeclass">
                 <span style="vertical-align: text-bottom;" class="glyphicon glyphicon-thumbs-up"></span> <span class="badge">   {{bk.likescount}}</span> 
               </span>
