--- a/WebContent/pages/admin/users.html
+++ b/WebContent/pages/admin/users.html
@@ -1,7 +1,7 @@
 <div ng-controller="usersController as uCtrl">
   <div class="container-fluid wellwellwell2">
     <table class="table table-stripped table-condensed">
-      <tr ng-repeat="us in uCtrl.users">
+      <tr ng-repeat="us in users">
         <td style="width: 10%;">
           <!-- photo --> <img class="img-responsive" src="{{us.photo_url}}">
         </td>
@@ -87,13 +87,36 @@
                 <p class="form-control-static col-sm-4">{{us.reviews.length}}</p>
               </div>
             </div>
-            <button class="btn btn-lg btn-default" ng-click="mCtrt.navToDetails(us.uid)">More Information</button>
+            <button class="btn btn-lg btn-info" ng-click="mCtrt.navToDetails(us.uid)">More Information</button>
           </form>
         </td>
         <td>
           <!-- Control buttons - delete likes reviews -->
+          <button class="btn btn-sm btn-danger"  data-toggle="modal" data-target="#deleteUser" data-user="{{us.uid}}">Delete user</button>
+          <!-- ng-click="mCtrt.deleteUser(us.uid)" -->
         </td>
       </tr>
     </table>
+  </div>
+</div>
+<div class="modal fade" id="deleteUser" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+        <h4 class="modal-title" id="composeLabel">Delete</h4>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="review-text" class="control-label">Are you sure you want to proceed?</label>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button id="btndeleteUser" ng-click="deleteUser()" type="button" class="btn btn-danger">Yes, delete this user</button>
+      </div>
+    </div>
   </div>
 </div>
