Reviews approval works + some bugfixes
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/admin/adMenu.html
+++ b/WebContent/pages/admin/adMenu.html
@@ -16,7 +16,8 @@
           <ul class="nav navbar-nav">
             <li><button id="btnUsers" type="button" class="btn btn-xs navbar-btn btn-default active" ng-click="mCtrt.navToUsers()">Users</button></li>
             <li><button id="btnMyBooks" type="button" class="btn btn-xs navbar-btn btn-default" ng-click="mCtrt.navToBooks()">Books</button></li>
-            <li><button id="btnReviews" type="button" class="btn btn-xs navbar-btn btn-default" ng-click="mCtrt.navToReviews()">Reviews</button></li>
+            <li><button id="btnReviews" type="button" class="btn btn-xs navbar-btn btn-default" ng-click="mCtrt.navToReviews()">Reviews  <span class="badge">{{revs}}</span></button></li>
+            <li><button id="btnTransactions" type="button" class="btn btn-xs navbar-btn btn-default" ng-click="mCtrt.navToTransactions()">Transaction</button></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><button class="mypop btn btn-danger navbar-btn" 
