--- a/WebContent/pages/admin/userDetails.html
+++ b/WebContent/pages/admin/userDetails.html
@@ -96,7 +96,9 @@
               <li class="list-group-item list-group-item-info">{{li.bookName}}</li>
               <li class="list-group-item">{{li.reviewBody}}</li>
             </ul>
-          </li></div>
+          </li>
+        </ul>
+      </div>
     </div>
 
 
