--- a/WebContent/pages/bookDetails.html
+++ b/WebContent/pages/bookDetails.html
@@ -1,10 +1,57 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
-
-</body>
-</html>
+<div ng-controller="bookReviewsController as brCtrl">
+  <div class="container-fluid wellwellwell2">
+    <div class="row">
+      <div class="col-md-3">
+        <img class="img-responsive img-thumbnail" src="{{bk.imageUrl}}">
+      </div>
+      <div class="col-md-9">
+        <div class="row">
+          <div class="col-sm-10 col-sm-offset-1">
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label class="col-sm-6 control-label">Name</label>
+                <div>
+                  <p class="col-sm-6 form-control-static">{{bk.name}}</p>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-6 control-label">Author</label>
+                <div>
+                  <p class="col-sm-6 form-control-static">{{bk.author}}</p>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-6 control-label">Genre</label>
+                <div>
+                  <p class="col-sm-6 form-control-static">{{bk.genre}}</p>
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-6 control-label">Description</label>
+                <div>
+                  <p class="col-sm-6 form-control-static">{{bk.description}}</p>
+                </div>
+              </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-10 col-sm-offset-1">
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                <h3 class="panel-title">Authorized reviews</h3>
+              </div>
+              <ul class="list-group">
+                <li class="list-group-item" ng-repeat="rw in bk.reviews">
+                  <ul class="list-group">
+                    <li class="list-group-item list-group-item-info">{{rw.nickname}}</li>
+                    <li class="list-group-item list-group-item-success">{{rw.reviewBody}}</li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
