--- a/WebContent/pages/store.html
+++ b/WebContent/pages/store.html
@@ -9,8 +9,8 @@
       <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1">
         <table class="table table-hover table-striped table-bordered">
           <tr ng-show="true" ng-repeat="product in products | filter:customBookFilter(searchBook)">
-            <td class="shop-row-1"><img class="book-thumb img-thumbnail" ng-src="{{product.imageUrl}}"></td>
-            <td class="shop-row-2">
+            <td class="shop-row-1"><img class="book-thumb img-thumbnail" ng-src="{{product.imageUrl}}" ng-click="lCtrt.navToBookDetail(product.bid)"></td>
+            <td class="shop-row-2" ng-click="lCtrt.navToBookDetail(product.bid)">
               <div style="text-align: left;">
                 <strong>{{product.name}}</strong> {{product.price | currency}}
               </div>
