Added test for duplicate username
Signed-off-by: Tegra Morgan <tegra.morgan.net@gmail.com>

--- a/WebContent/pages/navMenu.html
+++ b/WebContent/pages/navMenu.html
@@ -22,9 +22,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><button class="mypop btn btn-danger navbar-btn" 
-            data-toggle="popover" 
-            data-html="false" data-trigger="hover" data-placement="bottom" 
-            data-content="Log out">Greetings {{user.nickname}} </button></li>
+            data-toggle="popover" data-html="false" data-trigger="hover" 
+             data-placement="bottom" data-content="Log out" 
+            ng-click="lCtrt.logout()">Greetings {{user.nickname}} </button></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
