--- a/WebContent/pages/reading.html
+++ b/WebContent/pages/reading.html
@@ -1,3 +1,3 @@
-<div class="reading_pane">
+<div class="reading_pane" ng-controller="readingController as reCtrl">
 <div id="bookContent" ng-include="bookToRead.filepath"></div>
 </div>
