--- a/WebContent/pages/admin/adMenu.html
+++ b/WebContent/pages/admin/adMenu.html
@@ -23,7 +23,7 @@
             <li><button class="mypop btn btn-danger navbar-btn" 
             data-toggle="popover" 
             data-html="false" data-trigger="hover" data-placement="bottom" 
-            data-content="Log out" ng-click="">Greetings {{admin.login}} </button></li>
+            data-content="Log out" ng-click="mCtrt.logOut()">Greetings {{admin.login}} </button></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
