--- a/WebContent/pages/admin/users.html
+++ b/WebContent/pages/admin/users.html
@@ -87,7 +87,7 @@
                 <p class="form-control-static col-sm-4">{{us.reviews.length}}</p>
               </div>
             </div>
-            <button class="btn btn-lg btn-info" ng-click="mCtrt.navToDetails(us.uid)">More Information</button>
+            <button class="btn btn-lg btn-info" ng-click="lCtrt.navToDetails(us.uid)">More Information</button>
           </form>
         </td>
         <td>
