--- a/WebContent/pages/login.html
+++ b/WebContent/pages/login.html
@@ -1,4 +1,4 @@
-  <form id="loginForm" name="loginForm" ng-submit="lCtrt.login()" novalidate>
+  <form id="loginForm" name="loginForm" novalidate>
     <div class="row">
       <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
         <div class="account-wall">
@@ -30,12 +30,12 @@
 
           <div class="row">
             <div class="col-xs-4 col-xs-offset-2 text-center">
-              <button type="submit" class="btn btn-primary">
+              <button id="btnSubmitLogin" ng-click="lCtrt.login()" type="submit" class="btn btn-primary">
                 Sing-in <span class="glyphicon glyphicon-log-in"></span>
               </button>
             </div>
             <div class="col-xs-4 text-center">
-              <button class="btn btn-default" ng-click="lCtrt.navToRegister()">Register</button>
+              <button id="btnNavtoReg" class="btn btn-default" ng-click="lCtrt.navToRegister()">Register</button>
             </div>
           </div>
         </div>
